# fish

./: .gitattributes  .gitignore  .restyled.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HiddenEye.py  LICENSE  PROGRAM_LOGIC_DIAGRAM(Node).md  PROGRAM_LOGIC_DIAGRAM(Rust).md  README.md  README_RU.md  SECURITY.md  Settings.ini  alert.js  docker-compose.yml  fuc.js  index.html  index.js  instruction_raydium_cpmm.js  instructions.md  requirements.txt  swap.js  test.py
.config/: ngrok.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
Defs/: Actions.py  Checks.py  Configurations.py  Languages.py  ThemesManager.py
Defs/ActionManager/: Actions.py  informant.py  main_menu.py  main_runner.py  simple_informant.py
Defs/EmailManager/: email_prompt.py
Defs/FeatureManager/: cloudflare.py  feature_prompt.py  keylogger.py
Defs/ImportManager/: unsorted_will_be_replaced.py
Defs/LocalizationManager/: helper.py  lang_global_usage.py  lang_hiddeneye.py  localization.py
Defs/Send_Email/: EmailConfigDefault.py  SendEmail.py
Defs/ThemeManager/: theme.py
Docker/: Dockerfile  README.md  docker-compose.yml
Docker/images/: README.md
Server/CapturedData/: READ_IT  Read it.
Test-Phishing/: READEME.md
WebPages/: cloudflare.html
WebPages/CUSTOM(1)/: manual.txt
controllers/: EULA_controller.py  connection_controller.py  localization_controller.py  ngrok_controller.py  system_controller.py  terminal_controller.py
copy sniper bot(node) using gRPC/: main.js  parsingtransaction.js  raydium_cpmm_idl.json  raydium_launchpad_idl.json  swap(offchain).js
docs/: index.html  testphishingpages.txt
locale/: template.pot
models/: connection_model.py  localization_model.py
sniper (Rust) using jito Shred stream/: Cargo.toml  docker-compose.yml  logs.json  run.sh  shredstreamproxy.sh  trade_records.jsonl
sniper (Rust) using jito Shred stream/idls/: pump_0.1.0.json  token_program_idl.json  whirlpool_idl.json
sniper (Rust) using jito Shred stream/json-rpc-client/: Cargo.toml  README.md
sniper (Rust) using jito Shred stream/json-rpc-client/src/: lib.rs
sniper (Rust) using jito Shred stream/json-rpc-client/src/jsonrpc_client/: client_error.rs  http_sender.rs  mod.rs  request.rs  rpc_client.rs  rpc_sender.rs
sniper (Rust) using jito Shred stream/parsers/pump_interface/: Cargo.toml
sniper (Rust) using jito Shred stream/parsers/pump_interface/src/: accounts.rs  errors.rs  events.rs  instructions.rs  lib.rs  serializer.rs  typedefs.rs
sniper (Rust) using jito Shred stream/shared_state/: Cargo.toml  state.rs
sniper (Rust) using jito Shred stream/shared_state/src/: lib.rs
sniper (Rust) using jito Shred stream/src/: TradeDispather.rs  commands.rs  db.rs  hardcap.rs  instruction_account_mapper.rs  latency_test.rs  latest_block.rs  lib.rs  logger.rs  main.rs  secondbuy.rs  serialization.rs  shred_stream.rs  solana_helper.rs  tginterface.rs  token_serializable.rs  trade_logger.rs  trading_loop.rs
sniper (Rust) using jito Shred stream/src/common/: logger.rs  mod.rs  rpc.rs  utils.rs
sniper (Rust) using jito Shred stream/src/core/: token.rs  tx.rs
sniper (Rust) using jito Shred stream/src/dex/: middleware.rs  pump_fun.rs
sniper (Rust) using jito Shred stream/src/engine/: swap.rs
sniper (Rust) using jito Shred stream/src/services/: jito.rs  mod.rs  nextblock.rs  zeroslot.rs
views/: EULA_view.py  connection_view.py
(+50 files in other folders)
