[package]
name = "grpc-raydium-pool-monitoring-rust"
version = "3.0.0"
authors = ["Mephisto"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
borsh = { version = "1.5.3" }
bs58 = "0.5.1"
chrono = "0.4.39"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.135"
solana-sdk = "2.1.7"
solana-entry  = "=2.1.7"

solana-transaction-status = "2.1.7"
solana-program = "2.1.7"
solana-account-decoder-client-types = "2.1.7"
tokio = { version = "1.21.2", features = ["full", "rt-multi-thread", "fs"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls", "blocking"] }
tonic = "0.12.1"
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = { version = "4.0.0", default-features = false ,features = ["plugin"] }
yellowstone-vixen-core = { git = "https://github.com/rpcpool/yellowstone-vixen" }
yellowstone-vixen-parser = { git = "https://github.com/rpcpool/yellowstone-vixen", features = ["raydium"] }
indicatif = "0.17.9"
pump_interface = { path = "./parsers/pump_interface", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
postgres = "0.19"
solana-client = "2.1.7"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }

dotenv = "0.15"
lazy_static = "1.5.0"
shared_state = { path = "./shared_state" }
sdk = "0.1.0"
once_cell = "1.21.3"
uuid = { version = "1", features = ["v4"] }

solana-account-decoder = "=2.1.7"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-client = "=0.14.0"

jito-json-rpc-client = { path = "./json-rpc-client", package = "jito-block-engine-json-rpc-client" }
anchor-lang = "=0.31.0"
bytemuck = "1.21.0"
rand = "0.8.5"
tracing = "0.1.40"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-stream = "0.1.17"
borsh-derive = "1.5.3"
solana-transaction-status-client-types = "=2.1.7"
url = "2.3.1"
base64 = "0.22.1"
jito-protos        = { path = "/home/ubuntu/shreds_sniper/shredstream-proxy/jito_protos" }

[workspace]
members = [
    "json-rpc-client",
    "shared_state",
]



[build-dependencies]
tonic-build                = "0.10"
protobuf-src               = "1.0"
